# python-microservices-template

./: .gitignore  build.sh  docker-compose.yaml
cast-service/: Pipfile  requirements.txt
cast-service/app/: config.py  main.py
cast-service/app/api/: casts.py  db.py  db_manager.py  models.py
movie-service/: Dockerfile  Pipfile  requirements.txt
movie-service/app/: config.py  logger.py  main.py
movie-service/app/api/: db.py  db_manager.py  movies.py  service.py
shared/: Pipfile  pyproject.toml
shared/python_microservices_shared/: __init__.py
shared/python_microservices_shared/db/: db.py  repository.py
