[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "python-microservices-shared"
version = "0.0.1"
authors = [{ name = "Alex Xela", email = "fakemail@domain.org" }]
description = "Shared code for microservices"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
